Changes to be committed: 	new file:   cts 	deleted:    ../suite/audio_quality/Android.mk 	modified:   ../suite/audio_quality/BUILD.txt 	modified:   ../suite/audio_quality/client/src/com/android/cts/audiotest/AudioProtocol.java 	modified:   ../suite/audio_quality/compat/include/utils/Looper.h 	modified:   ../suite/audio_quality/compat/include/utils/StrongPointer.h 	modified:   ../suite/audio_quality/compat/include/utils/UniquePtr.h 	modified:   ../suite/audio_quality/compat/include/utils/threads.h 	modified:   ../suite/audio_quality/lib/src/Report.cpp 	modified:   ../suite/audio_quality/lib/src/SignalProcessingImpl.cpp 	modified:   ../suite/audio_quality/lib/src/SimpleScriptExec.cpp 	modified:   ../suite/audio_quality/lib/src/audio/AudioHardware.cpp 	modified:   ../suite/audio_quality/lib/src/audio/AudioPlaybackLocal.cpp 	modified:   ../suite/audio_quality/lib/src/audio/AudioRecordingLocal.cpp 	modified:   ../suite/audio_quality/lib/src/audio/RemoteAudio.cpp 	modified:   ../suite/audio_quality/lib/src/task/ModelBuilder.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskCase.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskInput.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskOutput.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskProcess.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskSave.cpp 	modified:   ../suite/audio_quality/lib/src/task/TaskSound.cpp 	modified:   ../suite/audio_quality/meson.build 	modified:   ../suite/audio_quality/test/AudioPlayTestCommon.h 	modified:   ../suite/audio_quality/test/AudioRecordPlayTestCommon.h 	modified:   ../suite/audio_quality/test/RemoteAudioFakeTcpTest.cpp
 Untracked files:
	../suite/audio_quality.backup/
	../suite/audio_quality/compat/include/tinyalsa/

Change-Id: I7e5955a8f0a8f0b4ef1d895e09e9e319141785a5